# neural-network-by-hand

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  activation-functions.html  all-build.sh  back-propagation.html  build.sh  chain-rule.html  cost-functions.html  feedforward-neural-network.html  forward-propagation.html  genindex.html  gradient-descent.html  intro.html  linear-algebra.html  neurons-and-networks.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  softmax.html  update.sh  vector-and-matrix-calculus.html
_sources/: activation-functions.md  back-propagation.ipynb  chain-rule.ipynb  chain-rule.md  feedforward-neural-network.ipynb  intro.md  linear-algebra.ipynb  linear-algebra.md  neurons-and-networks.ipynb  neurons-and-networks.md  softmax.md  vector-and-matrix-calculus.ipynb  vector-and-matrix-calculus.md
images/: network-diagram  neuron-diagram  plot_network.py  plot_neuron.py
nnbh/: _config.yml  _toc.yml  activation-functions.ipynb  activation-functions.md  back-propagation.md  chain-rule.ipynb  chain-rule.md  cost-functions.ipynb  cost-functions.md  feedforward-neural-network.ipynb  forward-propagation.ipynb  gradient-descent.ipynb  intro.md  linear-algebra.md  neurons-and-networks.ipynb  neurons-and-networks.md  softmax.ipynb  vector-and-matrix-calculus.ipynb  vector-and-matrix-calculus.md
